<resources>
    <string name="app_name">Sort List</string>
    <string name="sort_options_title">Sort Options</string>
    <string name="no_sort_order">No sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_symbols">Sort by symbols</string>
    <string name="apply_sort_order_text">Apply Sort Order</string>
    <string name="add_text">Add text</string>
    <string name="enter_text">Enter text..</string>
</resources>